[package]
name = "wasm-mt-pool"
version = "0.1.0"
authors = ["The wasm-mt Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/w3reality/wasm-mt/tree/master/crates/pool"
homepage = "https://github.com/w3reality/wasm-mt/tree/master/crates/pool"
documentation = "https://docs.rs/wasm-mt-pool"
description = "A thread pool library based on wasm-mt"
edition = "2018"
exclude = [
    "Makefile",
    "header.md",
    "examples/*",
    "tests/*",
]

[lib]
test = false

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
wasm-mt = "0.1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
]
