[package]
name = "wasm-mt-swc"
version = "0.1.1"
authors = ["The wasm-mt Developers", "강동윤 <kdy1997.dev@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/w3reality/wasm-mt/tree/master/crates/swc"
homepage = "https://github.com/w3reality/wasm-mt/tree/master/crates/swc"
documentation = "https://docs.rs/wasm-mt-swc"
description = """
A custom version of swc (https://github.com/swc-project/swc).
"""
edition = "2018"
exclude = [
  "pkg/*",
]

[lib]
test = false

[dependencies]
anyhow = "1"
base64 = "0.12.0"
dashmap = "3"
either = "1"
log = {version = "0.4", features = ["release_max_level_info"]}
once_cell = "1"
regex = "1"
serde = { version = "=1.0.118", features = ["derive"] }
serde_json = "1"
sourcemap = "6"
swc_atoms = "=0.2.5"
swc_common = { version = "=0.10.7", features = ["sourcemap", "concurrent"] }
swc_ecma_ast = "=0.36.0"
swc_ecma_codegen = "=0.42.0"
swc_ecma_parser = "=0.44.0"
swc_ecma_transforms = { version = "=0.31.0", features = ["const-modules", "react"] }
swc_ecma_transforms_macros = { version = "=0.1.1" }
swc_ecma_visit = "=0.22.0"
swc_visit = "=0.2.2"
ast_node = "=0.7.0"
