[package]
name = "wasm-mt-swc"
version = "0.1.3"
authors = ["The wasm-mt Developers", "강동윤 <kdy1997.dev@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/w3reality/wasm-mt/tree/master/crates/swc"
homepage = "https://github.com/w3reality/wasm-mt/tree/master/crates/swc"
documentation = "https://docs.rs/wasm-mt-swc"
description = """
A custom version of swc (https://github.com/swc-project/swc).
"""
edition = "2018"
exclude = [
  "pkg/*",
]

[lib]
test = false

[dependencies]
once_cell = "1"
swc = "=0.233.2"
swc_common = "=0.29.18"
swc_ecma_ast = "=0.95.2"
swc_ecma_transforms_module = "=0.154.2"