[package]
name = "parallel"
version = "0.1.0"
authors = ["The wasm-mt Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-mt-test = { path = '../../crates/test' }

[dependencies]
wasm-mt = { path = "../.." }
js-sys = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.3"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
rand = { version = "0.7", features = ["wasm-bindgen"] }
humantime = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'ImageData',
  'Performance',
  'PerformanceTiming',
  'Window',
]
