[package]
name = "pool_arraybuffers"
version = "0.1.0"
authors = ["The wasm-mt Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-mt-test = "0.1"

[dependencies]
wasm-mt = "0.1"
wasm-mt-pool = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.2"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
]
