[package]
name = "wasm-mt-pool-test-crate-web"
version = "0.1.0"
authors = ["The wasm-mt Developers"]
edition = "2018"

[lib]
path = "test.rs"

[dependencies]
wasm-mt-pool = { path = '../../..' }
wasm-mt-pool-test = { path = '../../../crates/test' }
wasm-mt = { path = '../../../../..' }
wasm-mt-test = { path = '../../../../../crates/test' }
wasm-bindgen-test = "0.3.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

serde = "1.0"
serde_closure = "0.3"

rand = { version = "0.7", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'TextEncoder',
]
